ImageDetailModal: fix mobile layout bug

--- a/src/TrueOrFalse.Frontend.Web/Style/Images.less
+++ b/src/TrueOrFalse.Frontend.Web/Style/Images.less
@@ -5,6 +5,8 @@
 
 .ImageContainer {
     position: relative;
+    -ms-word-break: break-word;
+    word-break: break-word;
 }
 
 .ItemImage {
